# bolt402

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  regtest.yml
crates/bolt402-cln/: Cargo.toml  build.rs
crates/bolt402-lnd/: build.rs
crates/bolt402-nwc/: Cargo.toml
crates/bolt402-python/: Cargo.toml  README.md  pyproject.toml
crates/bolt402-sqlite/: Cargo.toml
crates/bolt402-wasm/: Cargo.toml  README.md
demos/ai-research-agent/: .env.example  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
demos/l402-explorer/: .env.example  README.md  next.config.ts  package-lock.json  package.json
docs/: architecture.md
docs/design/: 003-lnd-backend.md  005-integration-tests.md  006-vercel-ai-sdk.md  007-contributing-templates-changelog.md  008-comprehensive-docs.md  009-bolt11-amount-decoding.md  010-python-bindings.md  011-langchain-example.md  012-comparison-page.md  013-ai-research-agent-demo.md  045-wasm-bindings.md  047-sqlite-token-store.md  050-nwc-backend.md  052-cln-backend.md  055-langchain-integration.md  058-multi-backend-failover.md
docs/tutorials/: budget-control.md  custom-backend.md  getting-started.md
examples/ai-agent/: README.md  index.ts  package.json
examples/basic-mock/: Cargo.toml  main.rs
examples/budget-control/: Cargo.toml  main.rs
examples/langchain/: README.md  langchain_example.py  requirements.txt
tests/regtest/: Cargo.toml  README.md  (+1 more)
(+81 files in other folders)
